<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.litebridge</groupId>
    <artifactId>litebridge</artifactId>
    <packaging>pom</packaging>
    <version>0.0.1</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Maven plugin versions -->
        <maven-enforcer-plugin.version>3.6.2</maven-enforcer-plugin.version>

        <!-- Library versions -->
        <h2.version>2.3.232</h2.version>
        <jackson-annotations.version>2.20</jackson-annotations.version>
        <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
        <junit-jupiter.version>5.14.1</junit-jupiter.version>
        <mockito-junit-jupiter.version>5.20.0</mockito-junit-jupiter.version>
        <slf4j.version>2.0.17</slf4j.version>
    </properties>

    <modules>
        <module>litebridge-commons</module>
        <module>litebridge-core</module>
        <module>litebridge-db</module>
        <module>litebridge-dto</module>
        <module>example</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven-enforcer-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-rules</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.9.11,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                </requireJavaVersion>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Project dependencies -->
            <dependency>
                <groupId>org.litebridge</groupId>
                <artifactId>litebridge-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.litebridge</groupId>
                <artifactId>litebridge-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.litebridge.db</groupId>
                <artifactId>litebridge-db-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.litebridge.db</groupId>
                <artifactId>litebridge-db-h2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.litebridge</groupId>
                <artifactId>litebridge-db-h2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.litebridge</groupId>
                <artifactId>litebridge-dto</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External dependencies -->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>${jakarta.annotation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-jdk14</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <!-- Test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito-junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>